Added "script5-mail-and-famail.js" file

--- a/EdgesGeometry/index.html
+++ b/EdgesGeometry/index.html
@@ -27,6 +27,6 @@
       }
     }
 </script>
-<script type="module" src="script4.js"></script>
+<script type="module" src="script5-mail-and-famail.js"></script>
 </body>
 </html>
