Changed file name

--- a/EdgesGeometry/index.html
+++ b/EdgesGeometry/index.html
@@ -28,6 +28,6 @@
       }
     }
 </script>
-<script type="module" src="script5-mail-and-famail.js"></script>
+<script type="module" src="script5-mail.js"></script>
 </body>
 </html>
