--- a/EdgesGeometry/index.html
+++ b/EdgesGeometry/index.html
@@ -28,6 +28,7 @@
       }
     }
 </script>
-<script type="module" src="script5-mail.js"></script>
+<!--<script type="module" src="script5-mail.js"></script>-->
+<script type="module" src="script-stack-overlflow.js"></script>
 </body>
 </html>
