--- a/EdgesGeometry/index.html
+++ b/EdgesGeometry/index.html
@@ -29,6 +29,7 @@
     }
 </script>
 <!--<script type="module" src="script5-mail.js"></script>-->
-<script type="module" src="script-stack-overlflow.js"></script>
+<!--<script type="module" src="script-stack-overlflow.js"></script>-->
+<script type="module" src="test2.js"></script>
 </body>
 </html>
