--- a/svg/index.html
+++ b/svg/index.html
@@ -67,7 +67,7 @@
         return path.join(' ');
     }
     
-    const arr = [{x: 0, y: 0}, {x: 100, y: 0}, {x: 100, y: 100}, {x: 0, y: 100}];
+    const arr = [{x: 0, y: 0}, {x: 50, y: 50}, {x: 100, y: 0}, {x: 100, y: 100}, {x: 0, y: 100}];
     const res = createRoundedPathString(arr);
     console.log(res);
 
@@ -76,7 +76,9 @@
 
     // Tworzenie obiektu path
     const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
-    path.setAttribute("d", res);
+    // path.setAttribute("d", res);
+    // path.setAttribute("d", "M10 10 H 90 V 90 H 10 L 10 10");
+    path.setAttribute("d", "M10 10 L 10 10 L 90 10 L 90 90 L 10 90");
 
     // Dodanie elementu path do elementu SVG
     svg.appendChild(path);
