--- a/svg/index.html
+++ b/svg/index.html
@@ -63,6 +63,10 @@
         }
         // Logically connect path to starting point again (shouldn't be necessary as path ends there anyway, but seems cleaner)
         path.push('Z');
+        // ==========
+        path.splice(2, 1);
+        console.log(path);
+        // ==========
 
         return path.join(' ');
     }
@@ -76,9 +80,9 @@
 
     // Tworzenie obiektu path
     const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
-    // path.setAttribute("d", res);
+    path.setAttribute("d", res);
     // path.setAttribute("d", "M10 10 H 90 V 90 H 10 L 10 10");
-    path.setAttribute("d", "M10 10 L 10 10 L 90 10 L 90 90 L 10 90");
+    // path.setAttribute("d", "M10 10 L 10 10 L 90 10 L 90 90 L 10 90");
 
     // Dodanie elementu path do elementu SVG
     svg.appendChild(path);
