--- a/svg/index.html
+++ b/svg/index.html
@@ -79,7 +79,7 @@
 
             // Sprawdzanie, czy kąt jest rozwarty
             if (angle >= 180) {
-                obtuseAnglesIndexes.push(p1);
+                obtuseAnglesIndexes.push(i);
             }
         }
 
