--- a/svg/index2.html
+++ b/svg/index2.html
@@ -3,9 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>$Title$</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        svg {
+            width: 100vw;
+            height: 100vh;
+        }
+    </style>
 </head>
 <body>
-<script>
+<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
+<script type="importmap">
+    {
+      "imports": {
+        "dat.gui": "../node_modules/dat.gui/build/dat.gui.module.js"
+      }
+    }
+</script>
+<script type="module">
+    import * as dat from 'dat.gui';
+    
     // Helper function to calculate the angle between three points
     function calculateAngle2(p1, p2, p3) {
         const angleRad = Math.atan2(p3.y - p2.y, p3.x - p2.x) - Math.atan2(p1.y - p2.y, p1.x - p2.x);
@@ -139,6 +159,7 @@
     const onlyLine = true;
     const curveRadius = 6;
 
+    arr.forEach(ele => {ele.x *= 5; ele.y *= 5;})
     const res = createRoundedPathString(arr, male, curveRadius);
     const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
     const path = document.createElementNS("http://www.w3.org/2000/svg", "path");
@@ -150,6 +171,10 @@
         svg.appendChild(path);
     }
     document.body.appendChild(svg);
+
+    //#region dat.gui
+    const gui = new dat.GUI();
+    //#endregion
 </script>
 </body>
 </html>
