--- a/svg/index2.html
+++ b/svg/index2.html
@@ -188,10 +188,10 @@
 
     //#region dat.gui
     const gui = new dat.GUI();
-    gui.add(config, "male");
-    gui.add(config, "onlyLine");
-    gui.add(config, "curveRadius");
-    gui.add(config2, "generate").name("Generate constructions");
+    gui.add(config, "male").name("Male");
+    gui.add(config, "onlyLine").name("Only line");
+    gui.add(config, "curveRadius").name("Radius");
+    gui.add(config2, "generate").name("Generate");
     //#endregion
 </script>
 </body>
