--- a/svg/index2.html
+++ b/svg/index2.html
@@ -201,7 +201,7 @@
 
     //#region dat.gui
     const gui = new dat.GUI();
-    gui.add(config, "male").name("Male");
+    gui.add(config, "male").name("Male/Exterior cut");
     gui.add(config, "onlyLine").name("Only line");
     gui.add(config, "curveRadius").name("Radius");
     gui.add(config, "shape", [1, 2]).name("Shape");
