--- a/svg/index2.html
+++ b/svg/index2.html
@@ -9,6 +9,7 @@
             padding: 0;
         }
         svg {
+            position: absolute;
             width: 100vw;
             height: 100vh;
         }
