--- a/load-svg/index.html
+++ b/load-svg/index.html
@@ -27,6 +27,6 @@
       }
     }
 </script>
-<script type="module" src="script.js"></script>
+<script type="module" src="script-svg-string.js"></script>
 </body>
 </html>
