--- a/svg/index2.html
+++ b/svg/index2.html
@@ -155,15 +155,207 @@
     
     const addSvgToHtml = () => {
         const arr1 = [
-            {x: 94.7955801104972, y: 116.6077348066299},
-            {x: 48.5414364640884, y: 87.9060773480663},
-            {x: 91.3370165745856, y: 77.9005524861878},
-            {x: 83.646408839779, y: 31.646408839779},
-            {x: 115.779005524862, y: 54.2872928176796},
-            {x: 171.3812154696132, y: 32.1325966850829},
-            {x: 148.0828729281768, y: 70.182320441989},
-            {x: 169.5801104972375, y: 114.8066298342542},
-            {x: 117.7513812154696, y: 92.8232044198895}
+            // {x: 94.7955801104972, y: 116.6077348066299},
+            // {x: 48.5414364640884, y: 87.9060773480663},
+            // {x: 91.3370165745856, y: 77.9005524861878},
+            // {x: 83.646408839779, y: 31.646408839779},
+            // {x: 115.779005524862, y: 54.2872928176796},
+            // {x: 171.3812154696132, y: 32.1325966850829},
+            // {x: 148.0828729281768, y: 70.182320441989},
+            // {x: 169.5801104972375, y: 114.8066298342542},
+            // {x: 117.7513812154696, y: 92.8232044198895}
+            {
+                x: 2108.56005859375,
+                y: 766.3400268554688
+            },
+            {
+                x: 2107.048583984375,
+                y: 768.4216918945312
+            },
+            {
+                x: 2105.5986328125,
+                y: 774.4851684570312
+            },
+            {
+                x: 2104.223388671875,
+                y: 784.2581176757812
+            },
+            {
+                x: 2102.93603515625,
+                y: 797.4681396484375
+            },
+            {
+                x: 2101.75,
+                y: 813.8428955078125
+            },
+            {
+                x: 2100.6787109375,
+                y: 833.1099853515625
+            },
+            {
+                x: 2099.735595703125,
+                y: 854.9971313476562
+            },
+            {
+                x: 2098.93408203125,
+                y: 879.2318725585938
+            },
+            {
+                x: 2098.287353515625,
+                y: 905.5418701171875
+            },
+            {
+                x: 2097.808837890625,
+                y: 933.65478515625
+            },
+            {
+                x: 2097.511962890625,
+                y: 963.29833984375
+            },
+            {
+                x: 2097.409912109375,
+                y: 994.2000122070312
+            },
+            {
+                x: 2097.511962890625,
+                y: 1025.1014404296875
+            },
+            {
+                x: 2097.808837890625,
+                y: 1054.7447509765625
+            },
+            {
+                x: 2098.287353515625,
+                y: 1082.8575439453125
+            },
+            {
+                x: 2098.93408203125,
+                y: 1109.16748046875
+            },
+            {
+                x: 2099.735595703125,
+                y: 1133.402099609375
+            },
+            {
+                x: 2100.6787109375,
+                y: 1155.2891845703125
+            },
+            {
+                x: 2101.75,
+                y: 1174.55615234375
+            },
+            {
+                x: 2102.93603515625,
+                y: 1190.930908203125
+            },
+            {
+                x: 2104.223388671875,
+                y: 1204.140869140625
+            },
+            {
+                x: 2105.5986328125,
+                y: 1213.913818359375
+            },
+            {
+                x: 2107.048583984375,
+                y: 1219.977294921875
+            },
+            {
+                x: 2108.56005859375,
+                y: 1222.0589599609375
+            },
+            {
+                x: 2110.0712890625,
+                y: 1219.977294921875
+            },
+            {
+                x: 2111.521240234375,
+                y: 1213.913818359375
+            },
+            {
+                x: 2112.896728515625,
+                y: 1204.140869140625
+            },
+            {
+                x: 2114.18408203125,
+                y: 1190.930908203125
+            },
+            {
+                x: 2115.3701171875,
+                y: 1174.55615234375
+            },
+            {
+                x: 2116.441162109375,
+                y: 1155.2891845703125
+            },
+            {
+                x: 2117.38427734375,
+                y: 1133.402099609375
+            },
+            {
+                x: 2118.18603515625,
+                y: 1109.16748046875
+            },
+            {
+                x: 2118.832763671875,
+                y: 1082.8575439453125
+            },
+            {
+                x: 2119.311279296875,
+                y: 1054.7447509765625
+            },
+            {
+                x: 2119.608154296875,
+                y: 1025.1014404296875
+            },
+            {
+                x: 2119.7099609375,
+                y: 994.2000122070312
+            },
+            {
+                x: 2119.608154296875,
+                y: 963.29833984375
+            },
+            {
+                x: 2119.311279296875,
+                y: 933.65478515625
+            },
+            {
+                x: 2118.832763671875,
+                y: 905.5418701171875
+            },
+            {
+                x: 2118.18603515625,
+                y: 879.2318725585938
+            },
+            {
+                x: 2117.38427734375,
+                y: 854.9971313476562
+            },
+            {
+                x: 2116.441162109375,
+                y: 833.1099853515625
+            },
+            {
+                x: 2115.3701171875,
+                y: 813.8428955078125
+            },
+            {
+                x: 2114.18408203125,
+                y: 797.4681396484375
+            },
+            {
+                x: 2112.896728515625,
+                y: 784.2581176757812
+            },
+            {
+                x: 2111.521240234375,
+                y: 774.4851684570312
+            },
+            {
+                x: 2110.0712890625,
+                y: 768.4216918945312
+            }
         ];
         
         const arr2 = [
@@ -185,7 +377,7 @@
                 break;
         }
 
-        arr.forEach(ele => {ele.x *= 5; ele.y *= 5;})
+        arr.forEach(ele => {ele.x /= 3; ele.y /= 3;})
         const res = createRoundedPathString(arr, config.male, config.curveRadius);
         const svg = document.createElementNS("http://www.w3.org/2000/svg", "svg");
         svg.setAttribute("id", "svg");
